unpackaged/main/default/objects/Lead/fields/CurrentSystem__c.field-meta.xml
<CustomField>
    <fullName>CurrentSystem__c</fullName>
    <label>Current System(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AdVerdict (Wilbur Ellis)</fullName>
            </value>
            <value>
                <fullName>Advisor (CDMS)</fullName>
            </value>
            <value>
                <fullName>AgConnections (Syngenta)</fullName>
            </value>
            <value>
                <fullName>AgLogic (John Deere)</fullName>
            </value>
            <value>
                <fullName>AgPhD (Hefty)</fullName>
            </value>
            <value>
                <fullName>AgriEdge (Syngenta)</fullName>
            </value>
            <value>
                <fullName>AGRIntelligence</fullName>
            </value>
            <value>
                <fullName>Agris (Cultura)</fullName>
            </value>
            <value>
                <fullName>AgStudio (Corteva)</fullName>
            </value>
            <value>
                <fullName>AgSync (Raven Slingshot)</fullName>
            </value>
            <value>
                <fullName>Agvance</fullName>
            </value>
            <value>
                <fullName>Agvance (SSI)</fullName>
            </value>
            <value>
                <fullName>AgVantage</fullName>
            </value>
            <value>
                <fullName>AgWorld</fullName>
            </value>
            <value>
                <fullName>AKERSCOUT (Aker Technologies)</fullName>
            </value>
            <value>
                <fullName>Apex (John Deere)</fullName>
            </value>
            <value>
                <fullName>ApRecs</fullName>
            </value>
            <value>
                <fullName>ARS (Nutrien)</fullName>
            </value>
            <value>
                <fullName>Biwer</fullName>
            </value>
            <value>
                <fullName>Chem-Man</fullName>
            </value>
            <value>
                <fullName>Climate Field View (Climate Corp)</fullName>
            </value>
            <value>
                <fullName>Critereon</fullName>
            </value>
            <value>
                <fullName>CropMetrics</fullName>
            </value>
            <value>
                <fullName>CropTrak</fullName>
            </value>
            <value>
                <fullName>DTN Smart Trap</fullName>
            </value>
            <value>
                <fullName>Encirca (Corteva)</fullName>
            </value>
            <value>
                <fullName>Famous Software (Famous ERP)</fullName>
            </value>
            <value>
                <fullName>Farm Command (Farmers Edge)</fullName>
            </value>
            <value>
                <fullName>FarmLogic</fullName>
            </value>
            <value>
                <fullName>Farm Works (Trimble)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>