unpackaged/main/default/objects/Lead/fields/Lead_Age__c.field-meta.xml
<CustomField>
    <fullName>Lead_Age__c</fullName>
    <description>This field shows the age of the lead (in days) since it was open till conversion</description>
    <formula>IF(
   IsConverted, ConvertedDate - DATEVALUE(CreatedDate),
	        IF(
	           OR(ISPICKVAL( Status, &quot;Disqualified&quot; ),ISPICKVAL( Status, &quot;Unqualified&quot; )),
                        DATEVALUE( Lead_Status_Change_Date__c ) - DATEVALUE(CreatedDate),
                        TODAY() - DATEVALUE(CreatedDate)
	        )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field shows the age of the lead (in days) since it was open till conversion</inlineHelpText>
    <label>Lead Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>