unpackaged/main/default/objects/Lead/fields/Lead_Status_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status_Change_Date__c</fullName>
    <description>Stores the date of the Last Status Change</description>
    <inlineHelpText>Stores the date of the Last Status Change</inlineHelpText>
    <label>Lead Status Change Date</label>
    <type>DateTime</type>
</CustomField>