unpackaged/main/default/objects/Lead/fields/Opportunity_Flag__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Flag__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Opportunity Flag</label>
    <type>Checkbox</type>
</CustomField>