unpackaged/main/default/objects/Lead/fields/Organic__c.field-meta.xml
<CustomField>
    <fullName>Organic__c</fullName>
    <defaultValue>false</defaultValue>
    <description>created for TAGCRM-1024</description>
    <inlineHelpText>Please specify whether the Company for the Lead has a specialty in Organic product</inlineHelpText>
    <label>Organic</label>
    <type>Checkbox</type>
</CustomField>