unpackaged/main/default/objects/Lead/fields/Sub_Industry__c.field-meta.xml
<CustomField>
    <fullName>Sub_Industry__c</fullName>
    <description>created for TAGCRM-251</description>
    <label>Sub Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sub_Industry</valueSetName>
    </valueSet>
</CustomField>