unpackaged/main/default/objects/Lead/validationRules/Error_on_disqualified_leads.validationRule-meta.xml
<ValidationRule>
    <fullName>Error_on_disqualified_leads</fullName>
    <active>true</active>
    <description>created for TAGCRM-760</description>
    <errorConditionFormula>IsConverted &amp;&amp; (ISPICKVAL(Status,&apos;Disqualified&apos;) ||  ISPICKVAL(PRIORVALUE(Status),&apos;Disqualified&apos;) )</errorConditionFormula>
    <errorMessage>You cannot convert Disqualified Leads.</errorMessage>
</ValidationRule>