unpackaged/main/default/objects/Lead/validationRules/Mandatory_country_and_First_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_country_and_First_Name</fullName>
    <active>true</active>
    <description>Make Country and First Name Mandatory.</description>
    <errorConditionFormula>OR
(
ISBLANK( Country ),
ISBLANK( FirstName)
)</errorConditionFormula>
    <errorMessage>First Name and Country are required to save Leads!</errorMessage>
</ValidationRule>