unpackaged/main/default/objects/Lead/validationRules/Require_Email_or_Phone.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Email_or_Phone</fullName>
    <active>true</active>
    <description>Require email or phone before save</description>
    <errorConditionFormula>AND
(
ISBLANK(Email),ISBLANK(Phone),ISBLANK(MobilePhone) 
)</errorConditionFormula>
    <errorMessage>Email or Phone or Mobile are required to save Leads!</errorMessage>
</ValidationRule>