unpackaged/main/default/objects/Lead/listViews/AFS_Exceedra_Leads_Lead.listView-meta.xml
<ListView>
    <fullName>AFS_Exceedra_Leads_Lead</fullName>
    <columns>LEAD.RATING</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Queue</filterScope>
    <label>AFS/Exceedra Leads</label>
    <queue>AFS_Exceedra_Leads</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>