unpackaged/main/default/objects/Lead/listViews/AGI_Leads_Lead.listView-meta.xml
<ListView>
    <fullName>AGI_Leads_Lead</fullName>
    <columns>LEAD.RATING</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Unqualified,Disqualified,Qualified</value>
    </filters>
    <label>AgIntegrated Leads</label>
    <queue>AGI_Leads</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>