unpackaged/main/default/objects/Lead/listViews/Farm_Ranch_Leads_Lead.listView-meta.xml
<ListView>
    <fullName>Farm_Ranch_Leads_Lead</fullName>
    <columns>LEAD.RATING</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Queue</filterScope>
    <label>Farm &amp; Ranch Leads</label>
    <queue>Farm_Ranch_Leads</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>